http://code.google.com/p/lino/source/browse/docs/blog/2013/0704.rst

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,9 +1,5 @@
-global-include *.txt *.py *.bat *.js *.css *.html \
-  *.ico *.jpg \
-  *.csv *.xml \
+global-include *.txt *.py *.js *.css *.html \
+  *.ico \
   *.odt \
-  *.wsdl \
-  *.xsd \
-  *.po *.mo Makefile
+  *.po *.mo
 prune docs
-prune htmlcov
